--- a/.github/workflows/main_elendil-mysql-app.yml
+++ b/.github/workflows/main_elendil-mysql-app.yml
@@ -28,11 +28,11 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-      - name: dotnet creat manifest for ef tool
-        run: dotnet new tool-manifest
-
       - name: dotnet ef install
         run: dotnet tool install dotnet-ef
+
+      - name: dotnet ef create bundle
+        run: dotnet ef migrations bundle -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
