--- a/.github/workflows/main_elendil-mysql-app.yml
+++ b/.github/workflows/main_elendil-mysql-app.yml
@@ -32,7 +32,7 @@ jobs:
         run: dotnet tool install dotnet-ef -g
 
       - name: dotnet ef create bundle
-        run: dotnet ef migrations bundle -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate --no-build -v
+        run: dotnet ef migrations bundle -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate -v
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
