--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AZURE_MYSQL_CONNECTIONSTRING": "Server=elendil-mysql-app-server.mysql.database.azure.com;Database=elendil-mysql-app-database;Port=3306;User Id=;Password=$;SSL Mode=Required"
+    "AZURE_MYSQL_CONNECTIONSTRING": "Server=localhost;User=root;Password=1234;Database=ef"
   }
 } 
