--- a/.github/workflows/main_azsdk-mysql-app.yml
+++ b/.github/workflows/main_azsdk-mysql-app.yml
@@ -28,6 +28,12 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
+      - name: dotnet ef install
+        run: dotnet tool install dotnet-ef -g
+
+      - name: dotnet ef create bundle
+        run: dotnet ef migrations bundle -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate -v
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
