--- a/.github/workflows/main_elendil-mysql-app.yml
+++ b/.github/workflows/main_elendil-mysql-app.yml
@@ -31,6 +31,9 @@ jobs:
       - name: dotnet ef install
         run: dotnet tool install dotnet-ef -g
 
+      - name: start mysql
+        run: sudo systemctl start mysql.service
+
       - name: dotnet ef create bundle
         run: dotnet ef migrations bundle -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate -v
 
