--- a/DotNetCoreSqlDb/appsettings.json
+++ b/DotNetCoreSqlDb/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AZURE_MYSQL_CONNECTIONSTRING": "Server=localhost;User=root;Password=1234;Database=ef"
+    "AZURE_MYSQL_CONNECTIONSTRING": "Server=localhost;UserID=root;Password=root;Database=mssqllocaldb"
   }
 } 
